# pytermvis

./: .gitignore  LICENSE  Makefile  README.md  asciimatics_vis.py  common.py  pygame_vis.py  pyproject.toml  pytermvis.py  requirements.txt  setup.py
pytermvis/: asciimatics_vis.py  pygame_vis.py  run.py
pytermvis/common/: common.py  constants.py
pytermvis/renderers/: __init__.py  asciimaticsrenderer.py  audiorenderer.py  matplotlibrenderer.py  pygamerenderer.py  renderer.py  textrenderer.py
pytermvis/samplers/: .soundcardsampler.py.swp  alsasampler.py  sampler.py  soundcardsampler.py
renderers/: __init__.py  asciimaticsrenderer.py  audiorenderer.py  pygamerenderer.py  randomtextrenderer.py  renderer.py
